--- a/css/styles.css
+++ b/css/styles.css
@@ -1,92 +1,90 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.forms{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.forms {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
 }
 
 .container {
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    margin: 0 20px;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 0 20px;
 }
 
-
 h3 {
-    text-align: center;
-    color: #333;
-    margin-bottom: 20px;
-    font-weight: bolder;
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+  font-weight: bolder;
 }
 
 label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #555;
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #555;
 }
 input[type="text"],
 input[type="password"],
 input[type="email"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 16px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+  box-sizing: border-box;
 }
-input[type="submit"] {
-    width: 100%;
-    padding: 12px;
-    border: none;
-    border-radius: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.btn-signup{
-    background-color: #007BFF;
-    color: white;
-}
-.btn-signup:hover{
-    background-color: #0056b3;
+button {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.btn-delete{
-    background-color: #DC3545;
-    color: white;
+.btn-signup {
+  background-color: #007bff;
+  color: white;
+}
+.btn-signup:hover {
+  background-color: #0056b3;
 }
 
-.btn-delete:hover{
-    background-color: #a71d2a;
+.btn-delete {
+  background-color: #dc3545;
+  color: white;
 }
 
-.btn-info{
-    background-color: #ffc107;
-    color: rgb(19, 16, 16);
+.btn-delete:hover {
+  background-color: #a71d2a;
 }
 
-.btn-info:hover{
-    background-color: #d39e00;
+.btn-info {
+  background-color: #ffc107;
+  color: rgb(19, 16, 16);
 }
 
-.btn-update{
-    background-color: #28A745;
-    color: white;
+.btn-info:hover {
+  background-color: #d39e00;
 }
 
-.btn-update:hover{
-    background-color: #1e7e34;
+.btn-update {
+  background-color: #28a745;
+  color: white;
 }
 
+.btn-update:hover {
+  background-color: #1e7e34;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+  text-align: center;
+}
