welcome page signed in

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,8 @@ input[type="email"] {
   font-size: 16px;
   box-sizing: border-box;
 }
-button {
+button,
+input[type="submit"] {
   width: 100%;
   padding: 12px;
   border: none;
